# AS5600-Driver

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
example/esp-no_std/: .gitignore  Cargo.toml  README.md
example/esp-no_std/.cargo/: config.toml
example/esp-std/: Cargo.toml  README.md
example/esp-std/src/: main.rs
example/linux/: Cargo.toml  README.md
example/linux/src/: main.rs
example/mock/: Cargo.toml  README.md
example/mock/src/: main.rs
src/: driver.rs  error.rs  lib.rs  mock.rs  regs.rs  traits.rs  types.rs
