[package]
edition      = "2024"
name         = "esp-no_std-example"
authors = ["pavver <pavvers1@gmail.com>"]
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-no_std"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }
esp-println = { version = "^0.16.1", features = ["esp32", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-alloc        = "0.9.0"

embedded-hal = "1.0"
AS5600-Driver = "0.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
