[package]
name = "esp-std-example"
version = "0.1.0"
authors = ["pavver <pavvers1@gmail.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "esp-std-example"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
self-test = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
embedded-hal = "1.0"

AS5600-Driver = { version = "0.1.0", features = ["std", "anyhow"]}
parking_lot = "0.12"

[build-dependencies]
embuild = "0.33"
